force-app/main/default/objects/EYI_Brokerage__c/EYI_Brokerage__c.object-meta.xml
<CustomObject>
    <label>Brokerage</label>
    <nameField>
        <displayFormat>RECB-{00000}</displayFormat>
        <label>Brokerage No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokerage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>