force-app/main/default/objects/EYI_Brokerage__c/fields/Email_User__c.field-meta.xml
<CustomField>
    <fullName>Email_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brokerage</relationshipName>
    <type>Lookup</type>
</CustomField>