force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Additional_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Additional_Brokerage_Amount__c</fullName>
    <description>Additional Brokerage amount will be calculated in total amount</description>
    <label>Additional Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>