force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Agreement_Value_in_Invoice__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Value_in_Invoice__c</fullName>
    <formula>EYI_Opportunity__r.SyncedQuote.EYI_Agreement_Value__c -  EYI_Opportunity__r.SyncedQuote.EYI_Infrastructure_charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value in Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>