force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Appartment_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Appartment_Value__c</fullName>
    <description>Save from flow Brokerage_Calculation Update</description>
    <label>Apartment Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>