force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Approved_Hold_On__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approved_Hold_On__c</fullName>
    <label>Approved/Hold On</label>
    <type>DateTime</type>
</CustomField>