force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_AutomationBypassDatetime__c.field-meta.xml
<CustomField>
    <fullName>EYI_AutomationBypassDatetime__c</fullName>
    <description>It is used for Automation by pass.</description>
    <label>AutomationBypassDatetime</label>
    <type>DateTime</type>
</CustomField>