force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage_Amount__c</fullName>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>