force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Brokerage_Amount_with_SGST__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage_Amount_with_SGST__c</fullName>
    <formula>EYI_Total_Brokerage_Amount__c * EYI_SGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amount with SGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>