force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>