force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_CGST__c.field-meta.xml
<CustomField>
    <fullName>EYI_CGST__c</fullName>
    <label>CGST %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>