force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Create_Invoice__c.field-meta.xml
<CustomField>
    <fullName>EYI_Create_Invoice__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[BrokData]0Q_234UAA378353,[BankInvDetails]0Q_235UAA991685?pv0=&quot; + EYI_Opportunity__c +
&quot;&amp;templateid=0T_121UAA503070&quot; + 
&quot;&amp;uf0=1&quot; + 
&quot;&amp;mfts0=Stages__c&quot; + 
&quot;&amp;mftsvalue0=Invoice Generated&quot; + 
&quot;&amp;qmode=SalesforceFile&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; + 
&quot;&amp;emailadditionalto=&quot; + EYI_REC_Email__c +
&quot;&amp;emailsubject=Invoice &quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;pdfa=1a&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Invoice</label>
    <type>Text</type>
</CustomField>