force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Final_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_Approval_Status__c</fullName>
    <description>It will update from Approval process</description>
    <label>Final Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>