force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Applicable</label>
    <type>Checkbox</type>
</CustomField>