force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Inventory_Id_Conga__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory_Id_Conga__c</fullName>
    <formula>EYI_Opportunity__r.SyncedQuote.EYI_Inventory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory_Id_Conga</label>
    <type>Text</type>
</CustomField>