force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Invoice_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Approval_Status__c</fullName>
    <description>It is Updated from Invoice Approval process.</description>
    <label>Invoice Sales Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved by TL</fullName>
            </value>
            <value>
                <fullName>Rejected by TL</fullName>
            </value>
            <value>
                <fullName>Approved by Head</fullName>
            </value>
            <value>
                <fullName>Rejected by Head</fullName>
            </value>
            <value>
                <fullName>Approved by Finance</fullName>
            </value>
            <value>
                <fullName>Rejected by Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>