force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Invoice_Checklist__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Checklist__c</fullName>
    <label>Invoice Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>