force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Invoice_Checklist_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Checklist_Rejection_Reason__c</fullName>
    <description>Add Invoice Checklist Reject reasons if rejected.</description>
    <label>Invoice Checklist Rejection Reason</label>
    <type>TextArea</type>
</CustomField>