force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Invoice_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Invoice letter uploaded from flow it will checked.</description>
    <label>Invoice Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>