force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVOICE IN PROCESS</fullName>
            </value>
            <value>
                <fullName>HOLD</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
            </value>
            <value>
                <fullName>PAYOUT COMPLETED</fullName>
            </value>
            <value>
                <fullName>PO CREATED</fullName>
            </value>
            <value>
                <fullName>PO RELEASED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>