force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Is_20_Booking_Received__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_20_Booking_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Booking (20% Received) from Opp then this checkbox will checked.</description>
    <label>Is 20% Booking Received</label>
    <type>Checkbox</type>
</CustomField>