force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Date__c</fullName>
    <label>SAP Payment Date</label>
    <type>Date</type>
</CustomField>