force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Id__c</fullName>
    <formula>EYI_Booking__r.Inventory__r.EYI_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>