force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Reason_for_Rejection_Hold__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reason_for_Rejection_Hold__c</fullName>
    <label>Reason for Rejection/Hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>