force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_REC_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Email__c</fullName>
    <formula>EYI_REC_Account__r.EYI_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REC Email</label>
    <type>Text</type>
</CustomField>