force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_REC_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Invoice_Number__c</fullName>
    <description>Provision to capture the REC invoice number from the signed REC invoice.</description>
    <label>REC Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>