force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_REC_Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Vendor_Code__c</fullName>
    <formula>EYI_REC_Account__r.EYI_REC_Vendor_Code__c</formula>
    <label>REC Vendor Code</label>
    <type>Text</type>
</CustomField>