force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Rejection_Hold_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rejection_Hold_Remarks__c</fullName>
    <label>Rejection/Hold Remarks</label>
    <length>40</length>
    <type>Text</type>
</CustomField>