force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_SAP_Bill_Desk_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Bill_Desk_Number__c</fullName>
    <label>SAP Bill Desk Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>