force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_SAP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Company_Code__c</fullName>
    <label>SAP Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>