force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_SAP_Document_Item__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Document_Item__c</fullName>
    <label>SAP Document Item</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>