force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_SAP_Document_Year__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Document_Year__c</fullName>
    <label>SAP Document Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>