force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_SAP_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Material_Number__c</fullName>
    <label>SAP Material Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>