force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_SAP_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Paid_Amount__c</fullName>
    <description>It will update from SAP</description>
    <label>SAP Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>