force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_SAP_UTR_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_UTR_Number__c</fullName>
    <label>SAP UTR Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>