force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_Total_Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Brokerage_Amount__c</fullName>
    <description>Calculate brokerage value.</description>
    <formula>(EYI_Appartment_Value__c * EYI_Brokerage_percentage__c) +
IF(
    NOT(ISBLANK(EYI_Additional_Brokerage_Amount__c)),
    EYI_Additional_Brokerage_Amount__c,
    0
)</formula>
    <label>Total Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>