force-app/main/default/objects/EYI_Brokerage__c/fields/EYI_X2_of_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_X2_of_Agreement_Value__c</fullName>
    <formula>EYI_Agreement_Value_in_Invoice__c * 0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 % of Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>