force-app/main/default/objects/EYI_Brokerage__c/fields/Opp_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Status_Changed_Date__c</fullName>
    <description>This field will autopopulate when opportunity status is changed to registration completed</description>
    <label>Opp Status Changed Date</label>
    <type>Date</type>
</CustomField>