force-app/main/default/objects/EYI_Brokerage__c/fields/Sourcing_Head__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Head__c</fullName>
    <label>Sourcing Head</label>
    <type>Email</type>
</CustomField>