force-app/main/default/objects/EYI_Brokerage__c/fields/Sourcing_Head_User__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Head_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Head User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brokerage2</relationshipName>
    <type>Lookup</type>
</CustomField>