force-app/main/default/objects/EYI_Brokerage__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <label>Sourcing Manager</label>
    <type>Email</type>
</CustomField>