force-app/main/default/objects/EYI_Brokerage__c/fields/Sourcing_TL__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_TL__c</fullName>
    <label>Sourcing TL</label>
    <type>Email</type>
</CustomField>