force-app/main/default/objects/EYI_Brokerage__c/fields/Sourcing_TL_User__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_TL_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing TL User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brokerage1</relationshipName>
    <type>Lookup</type>
</CustomField>