force-app/main/default/objects/EYI_Brokerage__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Pending</fullName>
                <label>Booking (Token Amount Received)</label>
            </value>
            <value>
                <fullName>Booking Registration Pending</fullName>
                <label>Booking (Registration Pending)</label>
            </value>
            <value>
                <fullName>Booking Registration Done</fullName>
                <label>Booking (Registration Done)</label>
            </value>
            <value>
                <fullName>Booking 20% Received</fullName>
                <label>Booking (20% Received)</label>
            </value>
            <value>
                <fullName>Invoice Generated</fullName>
                <label>Performa Generated</label>
            </value>
            <value>
                <fullName>Invoice Received</fullName>
            </value>
            <value>
                <fullName>Eligible To Raise Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice Accepted Sales</fullName>
            </value>
            <value>
                <fullName>Invoice Accepted Finance</fullName>
                <label>Invoice Accepted Finance (SAP)</label>
            </value>
            <value>
                <fullName>Invoice Rejected</fullName>
                <label>Invoice Hold/Rejected</label>
            </value>
            <value>
                <fullName>Payout Completed</fullName>
            </value>
            <value>
                <fullName>Invoice Accepted Compliance</fullName>
                <isActive>false</isActive>
                <label>Invoice Accepted Compliance</label>
            </value>
            <value>
                <fullName>Invoice Raised</fullName>
                <isActive>false</isActive>
                <label>Invoice Raised</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>