force-app/main/default/objects/EYI_Brokerage__c/fields/Unit_Details__c.field-meta.xml
<CustomField>
    <fullName>Unit_Details__c</fullName>
    <formula>EYI_Opportunity__r.EYI_Inventory__r.EYI_SAP_Material_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Details</label>
    <type>Text</type>
</CustomField>