force-app/main/default/objects/EYI_Brokerage__c/validationRules/REC_Checklist_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>REC_Checklist_Validation</fullName>
    <active>true</active>
    <description>It will check Stage invoice upload updated.</description>
    <errorConditionFormula>AND(
    /* Bypass check */
    NOT(
        AND(
            EYI_IsAutomationBypassed__c = TRUE,
            EYI_AutomationBypassDatetime__c = NOW()
        )
    ),
    
    /* Stage transition restriction */
    ISPICKVAL(Stages__c , &quot;Eligible To Raise Invoice&quot;),
    NOT(ISPICKVAL(PRIORVALUE(Stages__c), &quot;Invoice Received&quot;))
)</errorConditionFormula>
    <errorMessage>You can only move to &apos;Eligible To Raise Invoice&apos; if the previous stage was &apos;Invoice Received&apos;.</errorMessage>
</ValidationRule>