force-app/main/default/objects/EYI_Brokerage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Opportunity__c</columns>
    <columns>EYI_Invoice_Status__c</columns>
    <columns>Project__c</columns>
    <columns>EYI_Invoice_Amount__c</columns>
    <columns>Invoice_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>